# shadowfax

./: .clang-format  CMakeLists.txt  Doxyfile.debug.in  Doxyfile.in  README.md  convert_gadget2_ic.py  format_script.sh  write_version.cmake
inc/: ApproximateSolver.hpp  DelCont.hpp  DelTess.hpp  Error.hpp  ExArith.h  ExactRiemannSolver.hpp  FixedGrid.hpp  GadgetSnapshotReader.hpp  GadgetSnapshotWriter.hpp  GravityWalker.hpp  ICGenerator.hpp  ICMaker.hpp  ICRegion.hpp  Image.hpp  Line.hpp  LogFiles.hpp  MPIGlobal.hpp  MPIMethods.hpp  ParameterFile.hpp  Physics.hpp  Plane.hpp  Plotter.hpp  ProgramLog.hpp  RestartFile.hpp  RiemannSolver.hpp  RiemannSolverFactory.hpp  ShadowfaxSnapshotReader.hpp  ShadowfaxSnapshotWriter.hpp  ShadowfaxVersion.hpp.in  SidePrograms.hpp  Simplex.hpp  Simulation.hpp  SnapshotHandler.hpp  SnapshotReaderFactory.hpp  SnapshotWriterFactory.hpp  StateVector.hpp  SymbolicFunction.hpp  TimeLine.hpp  TimeStepWalker.hpp  VTKMaker.hpp  (+6 more)
rundir/: default.ini  default.yml
rundir/coolingtables/: filecopy.py
rundir/testsuite/: run_tests.sh
rundir/testsuite/cosmo/: analyze.py  cosmo3d.ini  ic_cosmo3d.hdf5  run.sh  run_3d.sh
rundir/testsuite/evrard/: README.txt  evrard3d.ini  evrard3d.xml  plot.py  run.sh  run_3d.sh
rundir/testsuite/evrard/exact3d/: profile3d000.txt  profile3d001.txt  profile3d002.txt  profile3d003.txt  profile3d004.txt  profile3d005.txt  profile3d006.txt  (+94 more)
rundir/testsuite/flatdensity/: README.txt  flatdensity2d.ini  flatdensity2d.xml  flatdensity3d.ini  flatdensity3d.xml  plot.py  run.sh  run_2d.sh  run_3d.sh
rundir/testsuite/gresho_vortex/: README.txt  gresho_vortex2d.ini  gresho_vortex2d.xml  gresho_vortex3d.ini  gresho_vortex3d.xml  plot.py  run.sh  run_2d.sh  run_3d.sh
rundir/testsuite/nbody/: README.txt  energy_error.py  ic_nbody3d.hdf5  nbody3d.ini  plot.py  run.sh  run_3d.sh
rundir/testsuite/overdensity/: README.txt  overdensity2d.ini  overdensity2d.xml  overdensity3d.ini  overdensity3d.xml  plot.py  run.sh  run_2d.sh  run_3d.sh
rundir/testsuite/restarttest/: README.txt  overdensity2d.ini  overdensity2d.xml  overdensity3d.ini  overdensity3d.xml  run.sh  run_2d.sh  run_3d.sh
rundir/testsuite/sedov_taylor/: README.txt  plot.py  run.sh  run_2d.sh  run_3d.sh  sedov.py  sedov_taylor2d.ini  sedov_taylor2d.xml  sedov_taylor3d.ini  sedov_taylor3d.xml
rundir/testsuite/vacuum/: plot.py  run.sh  run_2d.sh  run_3d.sh  vacuum.py  vacuum2d.ini  vacuum2d.xml  vacuum3d.ini  vacuum3d.xml
shapy2d/: __init__.py  si_units.py
shapy3d/: __init__.py  si_units.py
src/: ApproximateSolver.cpp  BlockICGenerator.cpp  BlockICGenerator.hpp  CMakeLists.txt  CircularBox.cpp  CircularBox.hpp  ClosestNgbSearch.cpp  ClosestNgbSearch.hpp  ColorMap.cpp  ColorMap.hpp  ContinuousStellarFeedback.cpp  ContinuousStellarFeedback.hpp  CoolingLocation.hpp.in  CoolingTable.cpp  CoolingTable.hpp  Cosmology.cpp  Cosmology.hpp  CubicBox.cpp  CubicBox.hpp  DelCont.hpp  DelTess.cpp  DelTess.hpp  DelTessCheck.cpp  DelTess_mpi.cpp  DiscreteStellarFeedback.cpp  DiscreteStellarFeedback.hpp  DiscreteStellarFeedbackData.hpp  Error.hpp  ExArith.cpp  ExArith.hpp  ExactRiemannSolver.cpp  ExternalGravity.cpp  ExternalGravity.hpp  FixedGrid.cpp  FixedGrid.hpp  GIZMO.cpp  GIZMO.hpp  GSL.cpp  GSL.hpp  GadgetSnapshotReader.cpp  (+108 more)
src/adaptive_mesh/: AdaptiveCellList.hpp  AdaptiveCellParallelSorter.hpp  AdaptiveFace2d.cpp  AdaptiveFace2d.hpp  AdaptiveFace3d.cpp  AdaptiveFace3d.hpp  AdaptiveMeshException.hpp  AdaptiveMeshUtils.cpp  AdaptiveMeshUtils.hpp  AdaptiveVorCell2d.cpp  AdaptiveVorCell2d.hpp  AdaptiveVorCell3d.cpp  AdaptiveVorCell3d.hpp  AdaptiveVorFace2d.cpp  AdaptiveVorFace2d.hpp  AdaptiveVorFace3d.cpp  AdaptiveVorFace3d.hpp  AdaptiveVorTess2d.cpp  AdaptiveVorTess2d.hpp  AdaptiveVorTess3d.cpp  AdaptiveVorTess3d.hpp  CMakeLists.txt  VorTessManager.cpp  VorTessManager.hpp  predicates.cpp  predicates.hpp
src/fortune/: BinarySearchTree.cpp  BinarySearchTree.hpp  CMakeLists.txt  DoublyConnectedEdgeList.cpp  DoublyConnectedEdgeList.hpp  FortuneVorTess.cpp  FortuneVorTess.hpp  PriorityQueue.cpp  PriorityQueue.hpp
src/io/: AsciiInput.cpp  AsciiInput.hpp  AsciiOutput.cpp  AsciiOutput.hpp  Block.cpp  Block.hpp  CMakeLists.txt  FileInput.cpp  FileInput.hpp  FileOutput.cpp  FileOutput.hpp  HDF5tools.hpp  Header.cpp  Header.hpp  Input.hpp  Output.hpp  PhysicalConstant.hpp  Unit.hpp  UnitConverter.hpp  UnitDefinitions.hpp  UnitSet.cpp  UnitSet.hpp  UnitSetGenerator.hpp
src/python/: CMakeLists.txt  GridModule.cpp  IOModule.cpp  LloydModule.cpp  Makefile  RiemannModule.cpp
src/riemann/: AdvectionRiemannSolver.cpp  AdvectionRiemannSolver.hpp  ApproximateSolver.cpp  ApproximateSolver.hpp  CMakeLists.txt  CollelaGlazRiemannSolver.cpp  CollelaGlazRiemannSolver.hpp  ExactRiemannSolver.cpp  ExactRiemannSolver.hpp  GottliebGrothRiemannSolver.cpp  GottliebGrothRiemannSolver.hpp  HLLCRiemannSolver.cpp  HLLCRiemannSolver.hpp  NoPressureRiemannSolver.cpp  NoPressureRiemannSolver.hpp  RiemannSolver.cpp  RiemannSolver.hpp  RiemannSolverFactory.hpp
src/utilities/: Box.hpp  CMakeLists.txt  Cuboid.hpp  DMParticle.cpp  DMParticle.hpp  EwaldTable.cpp  EwaldTable.hpp  EwaldTableLocation.hpp.in  GasParticle.cpp  GasParticle.hpp  HelperFunctions.cpp  HelperFunctions.hpp  Hilbert.cpp  Hilbert.hpp  ParallelSorter.hpp  Particle.cpp  Particle.hpp  ParticleConverter.hpp  ParticleFactory.hpp  ParticleTypes.hpp  ParticleVector.cpp  ParticleVector.hpp  StarParticle.cpp  StarParticle.hpp  Timer.cpp  Timer.hpp  Tree.cpp  Tree.hpp  TreeRoute.hpp  TreeWalker.hpp
test/: CMakeLists.txt  difcool.py  gentabs.py  gentabs2.py  myAssert.hpp  paramtest.yml  test.ini  testClosestNgbSearch.cpp  testCosmology.cpp  testDelTess.cpp  testDiscreteStellarFeedback.cpp  testExArith.cpp  testExternalGravity.cpp  testGSL.cpp  testGasCooling.cpp  testGasCooling.sh  testLegendre.cpp  testND.sh  testNDIrreg.sh  testNDIrregTable.cpp  testNDTable.cpp  testParameterFile.cpp  testRestartFile.cpp  testRiemannSolver.cpp  testRungeKutta.cpp  testShapy2d.py.in  testShapy3d.py.in  testSpecificICGenerator.cpp  testUnit.cpp  testYMLFile.cpp
(+22 files in other folders)
